--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "angualrjs-seed",
   "description": "A starter project for angular js",
   "dependencies": {
+    "bluebird": "^3.5.1",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "gzippo": "^0.2.0",
